WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203041
[LFC][IFC] Fix various vertical alignment issues.
https://bugs.webkit.org/show_bug.cgi?id=203041
Summary
[LFC][IFC] Fix various vertical alignment issues.
alan
Reported
2019-10-16 10:17:03 PDT
ssia
Attachments
Patch
(19.53 KB, patch)
2019-10-16 10:20 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(20.20 KB, patch)
2019-10-16 10:36 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2019-10-16 10:20:41 PDT
Created
attachment 381081
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2019-10-16 10:33:27 PDT
<
rdar://problem/56337146
>
alan
Comment 3
2019-10-16 10:36:55 PDT
Created
attachment 381083
[details]
Patch
Antti Koivisto
Comment 4
2019-10-16 12:48:43 PDT
Comment on
attachment 381083
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=381083&action=review
> Source/WebCore/layout/inlineformatting/InlineLine.cpp:190 > + // The inline-block's baseline offset is relative to its content box. Let's convert it relative to the margin box. > + // inline-block > + // \ > + // _______________ <- margin box > + // | > + // | ____________ <- border box > + // | | > + // | | _________ <- content box > + // | | | ^ > + // | | | | <- baseline offset > + // | | | | > + // text | | | v text > + // -----|-|-|---------- <- baseline > + //
Nice art.
alan
Comment 5
2019-10-16 12:50:17 PDT
(In reply to Antti Koivisto from
comment #4
)
> Comment on
attachment 381083
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=381083&action=review
> > > Source/WebCore/layout/inlineformatting/InlineLine.cpp:190 > > + // The inline-block's baseline offset is relative to its content box. Let's convert it relative to the margin box. > > + // inline-block > > + // \ > > + // _______________ <- margin box > > + // | > > + // | ____________ <- border box > > + // | | > > + // | | _________ <- content box > > + // | | | ^ > > + // | | | | <- baseline offset > > + // | | | | > > + // text | | | v text > > + // -----|-|-|---------- <- baseline > > + // > > Nice art.
I should have used emojis.
WebKit Commit Bot
Comment 6
2019-10-16 13:33:02 PDT
Comment on
attachment 381083
[details]
Patch Clearing flags on attachment: 381083 Committed
r251200
: <
https://trac.webkit.org/changeset/251200
>
WebKit Commit Bot
Comment 7
2019-10-16 13:33:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug